Fix mobile link to CV and attempt to fix publications scroll issue on mobile.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -431,6 +431,7 @@ i {
 @media only screen and (max-width: 790px) {
   #publications {
     max-width: 100%;
+    max-height: 100%;
     /*background-repeat: repeat-y;
     overflow: hidden;*/
     overflow-y: scroll;
